# meilisearch_rag

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
scripts/: index_documents.py
src/: app.py
src/conf/: settings.py
src/dependencies/: index_dependencies.py
src/domain/: chunk.py
src/domain/dataclasses/: dataclasses.py
src/domain/schemas/: requests.py
src/exceptions/: exceptions.py
src/infrastructure/: logger.py
src/infrastructure/llms/: base.py  bedrock.py  factory.py
src/infrastructure/vectorstores/: base.py  meilisearch.py
src/service/: search_service.py
tests/: fakes.py  test_routes.py  test_search_service.py
tests/infrastructure/: test_meilisearch.py
